# makerspace-inventory-intelligence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: streamlit_app.py
data/: README.md  sample_inventory.csv
docs/: architecture.md  data-privacy.md  decisions.md  project_ideas.md  source_audit.md
notebooks/: inventory_exploration.ipynb
scripts/: build_sample_data.py
src/makerspace_inventory/: __init__.py  analysis.py  cli.py  loaders.py  models.py  search.py  visualize.py
tests/: test_analysis.py  test_search.py
